# pytest-practice

./: .pre-commit-config.yaml  pyproject.toml
src/: converter.py
tests/: conftest.py
tests/individual/: basic_conversions.py  edge_cases.py  error_cases.py  fixture.py  group_conversion.py  last_conversion.py  same_currency.py  slow_tests.py  smoke_tests.py
